Fixed a layout bug on the Login page.

--- a/client/src/containers/Login/styles.css
+++ b/client/src/containers/Login/styles.css
@@ -1,13 +1,13 @@
 .page {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center !important;
   align-content: center !important;
   justify-content: center !important;
   background: transparent;
   width: 100%;
   height: 100%;
-  max-width: 100%;
+  min-width: 100%;
 }
 
 .cardContainer {
@@ -54,7 +54,7 @@
 .dialogueContainer {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-around;
+  justify-content: space-around !important;
 }
 
 .page .bottomLeft {
@@ -63,12 +63,16 @@
   margin-bottom: -10px;
   overflow: hidden;
   position: absolute;
+  max-width: 100%;
+  min-width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .page .topRight {
   animation: parallax-clouds 60s infinite alternate ease-in-out;
   position: absolute;
-  top: 0;
+  top: 5px;
   right: 0;
 }
 
